delete more Security Hotspots and Code smells